--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-logger": "^1.1.0",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-thunk": "^1.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
